[gd_scene load_steps=2 format=2]

[ext_resource path="res://source/interactibles/DialogueArea.gd" type="Script" id=1]

[node name="DialogueArea" type="Area2D"]
script = ExtResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_DialogueArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_DialogueArea_body_exited"]
[connection signal="dialogue_end" from="." to="." method="_on_DialogueArea_dialogue_end"]
